# rustid

./: Cargo.toml  README.md  clients.yaml  configuration.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
migrations/: 20251107191120_create_users_table.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs
src/http/: mod.rs  test.rs
src/oauth/: client.rs  login.rs  mod.rs  token.rs  types.rs
src/oauth/internal/: auth_code.rs  mod.rs  scope.rs  session.rs
tests/: authorize.rs  config.rs
