[package]
name = "rustid"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustid"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["tower-log", "macros"] }
chrono = "0.4.43"
clap = { version = "4.5.51", features = ["derive"] }
config = "0.15.18"
log = "0.4.28"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "runtime-tokio-rustls", "macros", "chrono", "migrate"], default-features = false }
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
uuid = { version = "1.18.1", features = ["serde"] }

[dev-dependencies]
reqwest = "0.12.24"
